2003-11-12  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/context.py (Context.DB_PATH_CONTEXT_PROPERTY): New
	variable.
	(Context.ID_CONTEXT_PROPERTY): Likewise.
	(Context.TMPDIR_CONTEXT_PROPERTY): Likewise.
	* qm/test/target.py (Target.RunTest): Set them.
	(Target._FinishResourceSetUp): Clear ID_CONTEXT_PROPERTY.
	(Target._SetUpResource): Set ID_CONTEXT_PROPERTY.

	* qm/common.py (parse_boolean): New function.
	* qm/fields.py (BooleanField.Validate): New method.
	* qm/test/context.py (ContextException.__init__): Generalize.
	(Context.GetBoolean): New method.
	* qm/test/result.py (Result.NoteException): Simplify.
	* qm/test/share/messages/diagnostics.txt (invalid boolean context
	var): New message.
	(missing context variable): Likewise.

	* qm/common.py (open_temporary_file): Fix typo.

2003-11-10  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/qmtest: If SIGINT is received, make sure that our exit
	code reflects that fact.
	* qm/test/classes/text_result_stream.py
	(TextResultStream._FormatStatistics): Robustify.

	* qm/test/classes/text_result_stream.py
	(TextResultStream.arguments): Add statistics_format.
	(TextResultStream._DisplayArguments): Do not write out the
	heading here.  Honor the statistics_format, if provided.
	(TextResultStream._SummarizeTestStats): Use _FormatStatistics.
	(TextResultStream._SummarizeRelativeTestStats): Likewise.
	(TextResultStream._FormatStatistics): New function.

2003-11-09  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (.PHONY): Add build and doc.
	(build): New target.
	(doc): Likewise.
	(check-serial): Depend on build, not all.
	(check-threads): Likewise.
	(check-processes): Likewise.
	(check-rsh): Likewise.

	* qm/temporary_directory.py (sys): Import it.
	
	* GNUmakefile.in (DOCUMENTATION): Set value to MAINTAINER_MODE.
	(TIDY): Likewise.
	(TIDYFLAGS): Likewise.
	* configure.in: Do not search for Jade, tidy, DocBook stylesheets,
	etc.
	* configure: Regenerated.
